--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ repositories {
 
 dependencies {
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
+    implementation("org.http4k:http4k-format-jackson:3.165.0")
 
     testImplementation("org.junit.jupiter:junit-jupiter:5.6.0")
     testImplementation("com.willowtreeapps.assertk:assertk-jvm:0.20")
